--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.3"
 
 services:
   api:
@@ -7,7 +7,9 @@ services:
     ports:
       - "3000:3000"
     restart: always
-  
+    networks:
+      - comunication
+
   web:
     container_name: web
     image: mdaniel543/web
@@ -16,5 +18,9 @@ services:
     restart: always
     depends_on:
       - api
-    links:
-      - api
+    networks:
+      - comunication
+
+networks:
+  comunication:
+    driver: bridge
