--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3"
 
 services:
   api:
@@ -7,8 +7,6 @@ services:
     ports:
       - "3000:3000"
     restart: always
-    networks:
-      - shared
 
   web:
     container_name: web
@@ -18,9 +16,9 @@ services:
     restart: always
     depends_on:
       - api
-    networks: 
-      - shared
+    links:
+      - api
 
-networks:
-  shared:
+
+
 
